samples/_failures_safe/1761716218_d5ed9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_662f2a6b.c: In function ‘main’:
./samples/SAFE/__tmp_662f2a6b.c:137:16: error: missing terminating " character
  137 |         printf("No
      |                ^~~
./samples/SAFE/__tmp_662f2a6b.c:137:9: error: expected expression at end of input
  137 |         printf("No
      |         ^~~~~~
./samples/SAFE/__tmp_662f2a6b.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_662f2a6b.c:137:9: error: expected declaration or statement at end of input
